@@ -1,12 +1,19 @@
 #!/bin/bash
 
-# run.sh
+# Obté el camí del mòdul JavaFX automàticament
+FX_PATH=$(find ~/.m2/repository/org/openjfx -name "javafx-*19.0.2.1.jar" -exec dirname {} \; | sort -u | tr '\n' ':' | sed 's/:$//')
 
-# Set MAVEN_OPTS environment variable
+if [[ -z "$FX_PATH" ]]; then
+    echo "No es pot trobar el mòdul JavaFX al repositori Maven local."
+    exit 1
+fi
+
+# Opcions comunes per a MAVEN_OPTS
+export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --module-path $FX_PATH --add-modules javafx.controls,javafx.fxml"
+
+# Opcions específiques per a Darwin
 if [[ "$OSTYPE" == "darwin"* ]]; then
-    export MAVEN_OPTS="-Xdock:icon=./target/classes/icons/iconOSX.png --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED"
-elif [[ "$OSTYPE" == "linux-gnu"* ]]; then
-    export MAVEN_OPTS="--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED"
+    export MAVEN_OPTS="$MAVEN_OPTS -Xdock:icon=./target/classes/icons/iconOSX.png"
 fi
 
 # Resta de l'script
@@ -19,7 +26,7 @@ echo "Main Class: $mainClass"
 
 # Execute mvn command with the profile and main class as arguments
 execArg="-PrunMain -Dexec.mainClass=$mainClass"
-echo "Exec args: $mainClass"
+echo "Exec args: $execArg"
 
 # Execute mvn command
-mvn clean test-compile exec:java $execArg 
+mvn clean test-compile exec:java $execArg
